Upgrade 12 of 14 models to verified NetLogo 7 Web exports
Two models are excluded (wolves-sheep-grass, evolution-resource-use-
social-behavior) — their NetLogo 7 Web exports errored and are left on
NetLogo 6.x pending investigation.

For each upgraded model, app.html is now the NetLogo 7 export (user-
verified working) and the prior NetLogo 6.x export is preserved as
app-legacy6.html rather than discarded, per the toolkit README's
documented procedure — this keeps existing consumers (e.g. the me-mo
app's offline demo, already built against a 6.x copy) from breaking
silently. Both metadata.json and assets/models.json carry the new
htmlAppLegacy pointer, and the explorer UI now surfaces a "try the
previous version" link wherever one exists.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>